--- a/00_read_json_log.ipynb
+++ b/00_read_json_log.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,18 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "folder = 'data'"
+    "folder = os.path.join('data', '17_dec')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -50,27 +50,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved to data/chat_17_dec.json\n"
+      "saved to data/17_dec/chat_17_dec.json\n"
      ]
     }
    ],
    "source": [
-    "log = jsonl_to_json('chat_17_dec.jsonl')"
+    "log = jsonl_to_json('chat_17_dec.jsonl', folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -148,8 +148,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
